src/main/resources/styles/postgame.css
.title {
    -fx-font-size: 28px;
    -fx-font-weight: bold;
}

.post-game-wrapper {
    -fx-padding: 15px;
}

.leader-vbox {
    -fx-spacing: 15px;
    -fx-padding: 15px;
    -fx-background-color: purple;
}

.cards-vbox {
    -fx-spacing: 15px;
    -fx-padding: 15px;
    -fx-background-color: green;
}

.favor-token {
    -fx-fill: white;
    -fx-stroke-width: 1;
    -fx-stroke: black;
}

.favor-token-text {
    -fx-font-weight: bold;
    -fx-font-size: 18px;
}

.tool-card-hbox {
    -fx-spacing: -90px;
    -fx-background-color: red;
}

.cards-hbox-holder {
    -fx-background-color: blue;
}

